modificato un po' di cose qua e la di grafica, test dei colori. Stavo pensando di provare a rimettere i vari crea scheda, crea giorno ecc come i popup che avevi creato la prima volta. Magari le fineste un pochino più piccole con tutti i bordi stondati come in quella adesso di crea_scheda.xml. Vedi se riesci a mettere il bordo stondato pure ai vari peso_dettaglio.xml e compagnia. Quando vuoi aggiungere le kcal attuali sta sempre quello zero orribile non se ne va. Il tasto di quando vuoi aggiungere le note, il popup, non si puo fare più piccolo in modo dinamico quando inizi a scrivere le note? Dobbiamo anche vedere un po' la pagina delle misure_dettaglio.xml. al massimo ci provo io. Aggiungere le note e il calendario a misure_dettaglio.xml, peso_dettaglio.xml. Basta cosi, credo

--- a/app/src/main/res/drawable/drawable_creascheda.xml
+++ b/app/src/main/res/drawable/drawable_creascheda.xml
@@ -4,10 +4,11 @@
     <shape
         android:shape="rectangle">
         <corners
+            android:radius="40dp"
             >
         </corners>
         <solid
-            android:color="@color/azzurrino">
+            android:color="@color/white">
         </solid>
 
     </shape>
