--- a/app/src/main/res/drawable/drawable_scheda.xml
+++ b/app/src/main/res/drawable/drawable_scheda.xml
@@ -7,7 +7,7 @@
             android:radius="40dp">
         </corners>
         <solid
-            android:color="@color/azzurrino">
+            android:color="@color/grigio">
         </solid>
 
     </shape>
