--- a/app/src/main/res/layout/crea_giorno.xml
+++ b/app/src/main/res/layout/crea_giorno.xml
@@ -36,6 +36,7 @@
             android:id="@+id/nomeGiorno"
             android:layout_width="0dp"
             android:textSize="24dp"
+            android:textAlignment="center"
             android:layout_weight="0.5"
             android:layout_height="wrap_content"
 
