--- a/app/src/main/res/layout/kcal_dettaglio.xml
+++ b/app/src/main/res/layout/kcal_dettaglio.xml
@@ -29,7 +29,7 @@
                 android:id="@+id/kcalAttual"
                 android:layout_width="0dp"
                 android:layout_weight="1"
-                android:text=""
+                android:textAlignment="center"
                 android:layout_height="wrap_content"
                 android:inputType="numberDecimal"
                 >
@@ -185,6 +185,7 @@
                 android:id="@+id/sale"
                 android:layout_width="0dp"
                 android:layout_weight="0.4"
+                android:textAlignment="center"
                 android:layout_height="wrap_content"
                 android:inputType="numberDecimal"
                 >
@@ -219,6 +220,7 @@
                 android:id="@+id/acqua"
                 android:layout_width="0dp"
                 android:layout_weight="0.4"
+                android:textAlignment="center"
                 android:layout_height="wrap_content"
                 android:inputType="numberDecimal"
                 >
@@ -254,7 +256,7 @@
                 android:layout_width="0dp"
                 android:layout_weight="1"
                 android:layout_height="wrap_content"
-
+                android:textAlignment="center"
                 >
             </EditText>
         </LinearLayout>
@@ -288,22 +290,26 @@
             android:gravity="center"
             >
             <Button
+            android:id="@+id/OkKcal"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Back"
+            android:textSize="18dp"
+                android:layout_margin="10dp"
+            android:background="@drawable/drawable_scheda"
+            >
+        </Button>
+            <Button
                 android:id="@+id/SalvaKcal"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Salva"
+                android:textSize="18dp"
                 android:background="@drawable/drawable_scheda"
-                android:layout_marginRight="20dp"
+                android:layout_margin="10dp"
                 >
             </Button>
-            <Button
-                android:id="@+id/OkKcal"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Back"
-                android:background="@drawable/drawable_scheda"
-                >
-            </Button>
+
         </LinearLayout>
 
 
