--- a/app/src/main/res/layout/note_dettaglio.xml
+++ b/app/src/main/res/layout/note_dettaglio.xml
@@ -13,22 +13,26 @@
         android:layout_alignParentBottom="true"
         >
         <Button
+        android:id="@+id/OkNote"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="18dp"
+        android:background="@drawable/drawable_scheda"
+        android:text="Back"
+            android:layout_margin="10dp"
+        >
+    </Button>
+        <Button
             android:id="@+id/SalvaNote"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Salva"
+            android:textSize="18dp"
             android:background="@drawable/drawable_scheda"
-            android:layout_marginRight="20dp"
+            android:layout_margin="10dp"
             >
         </Button>
-        <Button
-            android:id="@+id/OkNote"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@drawable/drawable_scheda"
-            android:text="Back"
-            >
-        </Button>
+
     </LinearLayout>
 
     <LinearLayout
@@ -36,6 +40,7 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:layout_marginBottom="20dp"
+        android:layout_marginTop="200dp"
         >
         <TextView
             android:layout_width="0dp"
@@ -45,6 +50,7 @@
             android:textColor="@color/black"
             android:textSize="18dp"
             android:gravity="center"
+            android:textAlignment="center"
             android:layout_marginRight="10dp"
             ></TextView>
         <EditText
