--- a/app/src/main/res/layout/peso_dettaglio.xml
+++ b/app/src/main/res/layout/peso_dettaglio.xml
@@ -2,7 +2,9 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="20dp">
+    android:padding="20dp"
+    android:background="@drawable/drawable_creascheda"
+    >
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -15,14 +17,15 @@
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
                 android:gravity="center"
-                android:layout_marginBottom="20dp"
+                android:layout_marginTop="50dp"
+                android:layout_marginBottom="70dp"
                 >
                 <TextView
                     android:layout_width="0dp"
-                    android:layout_weight="1"
+                    android:layout_weight="0.6"
                     android:layout_height="wrap_content"
                     android:layout_marginRight="10px"
-                    android:text="Peso attuale"
+                    android:text="Peso attuale:"
                     android:textColor="@color/black"
                     android:textSize="18dp"
                     android:gravity="center"
@@ -31,6 +34,7 @@
                     android:id="@+id/pesoAttual"
                     android:layout_width="0dp"
                     android:layout_weight="1"
+                    android:textAlignment="center"
                     android:layout_height="wrap_content"
                     android:inputType="numberDecimal"
                     >
@@ -70,25 +74,29 @@
         android:layout_alignParentBottom="true"
         >
         <Button
+        android:id="@+id/okButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Back"
+        android:textSize="18dp"
+        android:background="@drawable/drawable_scheda"
+        android:layout_gravity="center"
+            android:layout_margin="10dp"
+        >
+
+    </Button>
+        <Button
             android:id="@+id/salvaButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Salva"
+            android:textSize="18dp"
             android:background="@drawable/drawable_scheda"
             android:layout_gravity="center"
-            android:layout_marginRight="10dp"
+            android:layout_margin="10dp"
             >
         </Button>
-        <Button
-            android:id="@+id/okButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Back"
-            android:background="@drawable/drawable_scheda"
-            android:layout_gravity="center"
-            >
 
-        </Button>
 
     </LinearLayout>
 
