--- a/app/src/main/res/layout/registrazione.xml
+++ b/app/src/main/res/layout/registrazione.xml
@@ -3,30 +3,58 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="10dp"
+    android:background="@color/gliglio_sculo"
+
     >
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
         >
-        <TextView
-            android:id="@+id/titoloPaginaReg"
+
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="REGISTRAZIONE"
-            android:textColor="@color/black"
-            android:layout_gravity="center_horizontal"
-            android:textSize="100px"
-            android:layout_marginBottom="20px"
-            >
+            android:orientation="horizontal">
 
-        </TextView>
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="40dp"
+                android:layout_marginLeft="5dp"
+                android:layout_marginRight="20dp"
+                android:layout_marginTop="5dp"
+                android:adjustViewBounds="true"
+                android:scaleType="centerCrop"
+                android:src="@drawable/ic_baseline_fitness_center_24">
+
+            </ImageView>
+            <TextView
+                android:id="@+id/titoloPaginaReg"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginBottom="20px"
+                android:layout_weight="1"
+                android:text="REGISTRAZIONE"
+                android:textColor="@color/white"
+                android:textSize="100px">
+            </TextView>
+
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            >
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:gravity="center"
             android:padding="20px"
+            android:layout_margin="10dp"
             >
             <TextView
                 android:layout_width="0dp"
@@ -34,7 +62,7 @@
                 android:gravity="center"
                 android:layout_height="wrap_content"
                 android:text="Nome:"
-                android:textColor="@color/black"
+                android:textColor="@color/white"
                 android:textSize="18dp"
                 android:layout_marginRight="20px"
                 >
@@ -43,8 +71,11 @@
                 android:id="@+id/nomeRegistrazione"
                 android:layout_width="0dp"
                 android:layout_weight="1"
+                android:textAlignment="center"
+                android:padding="3dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
+                android:background="@color/white"
                 >
             </EditText>
         </LinearLayout>
@@ -54,6 +85,7 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:gravity="center"
+            android:layout_margin="10dp"
             >
             <TextView
                 android:layout_width="0dp"
@@ -61,7 +93,7 @@
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:text="Cognome:"
-                android:textColor="@color/black"
+                android:textColor="@color/white"
                 android:textSize="18dp"
                 android:layout_marginRight="20px"
                 >
@@ -70,7 +102,10 @@
                 android:id="@+id/cognomeRegistrazione"
                 android:layout_width="0dp"
                 android:layout_weight="1"
+                android:padding="3dp"
+                android:textAlignment="center"
                 android:layout_height="wrap_content"
+                android:background="@color/white"
                 >
             </EditText>
         </LinearLayout>
@@ -80,6 +115,7 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:gravity="center"
+            android:layout_margin="10dp"
             >
             <TextView
                 android:layout_width="0dp"
@@ -87,7 +123,7 @@
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:text="Età:"
-                android:textColor="@color/black"
+                android:textColor="@color/white"
                 android:textSize="18dp"
                 android:layout_marginRight="20px"
                 >
@@ -95,7 +131,10 @@
             <EditText
                 android:id="@+id/etaRegistrazione"
                 android:layout_width="0dp"
+                android:textAlignment="center"
                 android:layout_weight="1"
+                android:padding="3dp"
+                android:background="@color/white"
                 android:layout_height="wrap_content"
                 android:inputType="numberDecimal"
                 >
@@ -107,6 +146,8 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:gravity="center"
+            android:textAlignment="center"
+            android:layout_margin="10dp"
             >
             <TextView
                 android:layout_width="0dp"
@@ -115,7 +156,7 @@
                 android:gravity="center"
                 android:text="Nome Utente:"
                 android:layout_marginRight="20px"
-                android:textColor="@color/black"
+                android:textColor="@color/white"
                 android:textSize="18dp"
 
                 >
@@ -123,7 +164,10 @@
             <EditText
                 android:id="@+id/nomeUtenteRegistrazione"
                 android:layout_width="0dp"
+                android:background="@color/white"
                 android:layout_weight="1"
+                android:textAlignment="center"
+                android:padding="3dp"
                 android:layout_height="wrap_content"
                 >
             </EditText>
@@ -134,6 +178,7 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:gravity="center"
+            android:layout_margin="10dp"
             >
             <TextView
                 android:layout_width="0dp"
@@ -142,7 +187,7 @@
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:text="Altezza:"
-                android:textColor="@color/black"
+                android:textColor="@color/white"
                 android:textSize="18dp"
 
                 >
@@ -150,19 +195,23 @@
             <EditText
                 android:id="@+id/altezzaRegistrazione"
                 android:layout_width="0dp"
+                android:background="@color/white"
                 android:layout_weight="0.8"
+                android:padding="3dp"
+                android:textAlignment="center"
                 android:layout_height="wrap_content"
                 android:inputType="numberDecimal"
                 >
             </EditText>
+
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:text="cm"
-                android:textColor="@color/black"
-                android:textSize="18dp"
                 android:layout_weight="0.2"
-                >
+                android:text="cm"
+                android:layout_margin="1.5dp"
+                android:textColor="@color/white"
+                android:textSize="18dp">
 
             </TextView>
         </LinearLayout>
@@ -172,6 +221,7 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:gravity="center"
+
             >
             <TextView
                 android:layout_width="0dp"
@@ -180,7 +230,7 @@
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:text="Peso:"
-                android:textColor="@color/black"
+                android:textColor="@color/white"
                 android:textSize="18dp"
                 >
             </TextView>
@@ -192,6 +242,7 @@
                 android:tag="peso"
                 android:onClick="FunzioniInserisciRegistrazioni"
                 android:text="Inserisci"
+                android:textSize="18dp"
                 android:background="@drawable/drawable_scheda"
                 >
 
@@ -211,7 +262,7 @@
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:text="Misure:"
-                android:textColor="@color/black"
+                android:textColor="@color/white"
                 android:textSize="18dp"
 
                 >
@@ -223,6 +274,7 @@
                 android:layout_height="wrap_content"
                 android:text="Inserisci"
                 android:tag="misure"
+                android:textSize="18dp"
                 android:onClick="FunzioniInserisciRegistrazioni"
                 android:background="@drawable/drawable_scheda"
                 >
@@ -242,7 +294,7 @@
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:text="Kcal Attuali:"
-                android:textColor="@color/black"
+                android:textColor="@color/white"
                 android:textSize="18dp"
                 android:layout_weight="0.5"
                 >
@@ -254,6 +306,7 @@
                 android:layout_height="wrap_content"
                 android:text="Inserisci"
                 android:tag="kcal"
+                android:textSize="18dp"
                 android:onClick="FunzioniInserisciRegistrazioni"
                 android:background="@drawable/drawable_scheda"
                 >
@@ -272,7 +325,7 @@
                 android:gravity="center"
                 android:text="Note:"
                 android:layout_marginRight="20px"
-                android:textColor="@color/black"
+                android:textColor="@color/white"
                 android:textSize="18dp"
                 android:layout_weight="0.5"
                 >
@@ -284,12 +337,17 @@
                 android:layout_height="wrap_content"
                 android:text="Inserisci"
                 android:tag="note"
+                android:textSize="18dp"
+
                 android:onClick="FunzioniInserisciRegistrazioni"
                 android:background="@drawable/drawable_scheda"
                 >
             </Button>
+            </LinearLayout>
         </LinearLayout>
     </LinearLayout>
+
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
