--- a/app/src/main/res/layout/schede_pag3.xml
+++ b/app/src/main/res/layout/schede_pag3.xml
@@ -2,6 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/gliglio_sculo"
     >
 
     <LinearLayout
@@ -33,11 +34,9 @@
             android:layout_weight="1"
             android:gravity="center"
             android:text=""
-            android:textColor="@color/black"
+            android:textColor="@color/white"
             android:textSize="30dp"
             android:layout_margin="5dp"
-
-
             ></TextView>
 
         <Button
