--- a/app/src/main/res/layout/crea_esercizio.xml
+++ b/app/src/main/res/layout/crea_esercizio.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:id="@+id/origineEsercizio"
     android:layout_height="match_parent"
-    android:background="@color/white"
+    android:background="@drawable/drawable_creascheda"
     android:paddingTop="20dp"
     android:paddingLeft="20dp"
     android:paddingRight="20dp"
