Misure aggiunto note e calendario

--- a/app/src/main/res/layout/kcal_dettaglio.xml
+++ b/app/src/main/res/layout/kcal_dettaglio.xml
@@ -2,6 +2,7 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/drawable_creascheda"
     >
     <LinearLayout
         android:layout_width="match_parent"
@@ -30,6 +31,7 @@
                 android:layout_width="0dp"
                 android:layout_weight="1"
                 android:textAlignment="center"
+                android:text=""
                 android:layout_height="wrap_content"
                 android:inputType="numberDecimal"
                 >
