Aggiunto note dove richiesto. Quando salvi una modifica nella data di qualcosa, se la data corrisponde ad una data gia presente nel db allora sovrascrive i valori. Se la data, non è mai stata registrata allora aggiorna i vecchi valori relativi alla data. Per esempio in peso e in misure

--- a/app/src/main/res/layout/peso_dettaglio.xml
+++ b/app/src/main/res/layout/peso_dettaglio.xml
@@ -49,6 +49,34 @@
                     ></TextView>
 
             </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:gravity="center"
+            android:layout_marginBottom="20dp"
+            >
+            <TextView
+                android:layout_width="0dp"
+                android:layout_weight="0.5"
+                android:layout_height="wrap_content"
+                android:text="Note:"
+                android:textColor="@color/black"
+                android:textSize="18dp"
+                android:gravity="center"
+                ></TextView>
+            <EditText
+                android:id="@+id/notePeso"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="wrap_content"
+                android:textAlignment="center"
+                >
+            </EditText>
+        </LinearLayout>
+
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
